[gd_scene load_steps=2 format=3 uid="uid://b0dalpv8mvfw6"]

[ext_resource type="Script" uid="uid://b6uqrbwudw3ra" path="res://Calendar/Scripts/schedule_importer.gd" id="1_wxwin"]

[node name="ScheduleImporter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_wxwin")

[node name="PopupButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
toggle_mode = true

[node name="ImportPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -71.0
offset_right = 73.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ImportPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ImportPanel/MarginContainer"]
layout_mode = 2

[node name="ScheduleEntryTextField" type="TextEdit" parent="ImportPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Paste schedule from mymercer here"
wrap_mode = 1
caret_blink = true

[node name="ImportButton" type="Button" parent="ImportPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "IMPORT"

[connection signal="toggled" from="PopupButton" to="." method="_on_popup_button_toggled"]
[connection signal="pressed" from="ImportPanel/MarginContainer/VBoxContainer/ImportButton" to="." method="_on_import_button_pressed"]
